# buywhere-catalog-api

./: .env.alerting.template  .env.example  .env.staging  .gitignore  =1.0.0  BUY-14318-deployment-ready.sh  BUY-2047-comparison-summary.md  BUY-2084-agent-onboarding-playbook.md  DEPLOYMENT_RUNBOOK.md  Dockerfile  Dockerfile.mcp  README.md  affiliate_pipeline.py  alembic.ini  alertmanager.yml  blackbox.yml  bulk_ingest.py  chatgpt-openapi.json  claude-mcp-registry-submission.md  debug_central.py  debug_page2.py  docker-compose.prod.yml  docker-compose.yml  feeds_gs.txt  fluent-bit.conf  glama.json  ikea_us.py  ingest_catalog.py  ingest_gamestop.py  ingest_raw.py  ingest_subdirs.py  ingest_woo_gshopping.py  load_test_p99.py  loki-config.yml  mcp_server.py  mkdocs.yml  next.config.mjs  nginx.conf  openapi.yaml  package-lock.json  (+35 more)
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/go/: README.md  client.go  errors.go  go.mod  models.go
sdk/js/: README.md  package.json  tsconfig.json
sdk/js/src/: client.ts  index.ts  types.ts
sdk/npm/: README.md  package-lock.json  package.json  tsconfig.json
sdk/npm/examples/: compare-product.ts  get-product.ts  price-history.ts  register-webhook.ts  search-products.ts
sdk/npm/src/: client.ts  errors.ts  index.ts  types.ts
sdk/src/buywhere_sdk/: __init__.py  client.py  exceptions.py  langchain.py  models.py
sdk/ts-generated/: BuyWhere.ts  README.md  fix-spec.js  index.ts  package-lock.json  package.json  tsconfig.json
sdk/ts-generated/core/: OpenAPI.ts
sdk/ts-generated/models/: CatalogHealthReport.ts  CatalogStatsReport.ts  CatalogStatus.ts  CategoryNode.ts  CategoryResponse.ts  ChangelogChange.ts  ChangelogRelease.ts  ChangelogResponse.ts  CompareDiffEntry.ts  CompareDiffRequest.ts  CompareDiffResponse.ts  CompareMatch.ts  CompareMatrixEntry.ts  CompareMatrixRequest.ts  CompareMatrixResponse.ts  CompareResponse.ts  DBConnectionHealth.ts  DBHealthReport.ts  DBPoolHealth.ts  DealItem.ts  DealsResponse.ts  DeduplicationReport.ts  DuplicateGroup.ts  FieldDiff.ts  FreshnessReport.ts  IngestError.ts  IngestProductItem.ts  IngestRequest.ts  IngestResponse.ts  IngestionRunComplete.ts  IngestionRunCreate.ts  IngestionRunDetail.ts  IngestionRunInfo.ts  IngestionRunResponse.ts  IngestionRunSummary.ts  IngestionRunUpdate.ts  IngestionStats.ts  PlatformCompliance.ts  PlatformProductCount.ts  (+12 more)
(+1387 files in other folders)
